--- a/Testing6/packages.config
+++ b/Testing6/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Build.Tasks.Git" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net461" />
   <package id="Microsoft.TestPlatform" version="16.9.4" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="2.2.3" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="2.2.3" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
